<resources>
    <string name="app_name">Paint</string>
    <string name="undo">Отменить</string>
    <string name="delete">Отчистить</string>
    <string name="choose_color">Выбрать цвет</string>
    <string name="save">Сохранить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_picture">Нет сохраненных рисунков</string>
    <string name="draw">Рисовать</string>
    <string name="enter_name">Введите имя</string>
    <string name="cancel">Отмена</string>
    <string name="explanation">Мне нужно разрешение на чтение и запись файлов, чтобы вы могли пользоваться приложением</string>
    <string name="allow">Разрешить</string>
    <string name="open_settings">Открыть настройки</string>
    <string name="permanently_denied">Вы навсегда отклонили разрешения, без которых я не могу работать</string>
    <string name="no_app_open_settings">Разрешения навсегда запрещены</string>
    <string name="deleting_file">Удаление файла</string>
    <string name="really_deleting_file">Вы действительно хотите удалить файл?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="enter_your_name">Введите имя</string>
</resources>